--- a/src/LoginPage.css
+++ b/src/LoginPage.css
@@ -1,5 +1,5 @@
 body{
-	background-image: url('Workout-PNG.png');
+	background-image: url('barbell.png');
     	background-size: cover; 
     	background-repeat: no-repeat; 
     	background-position: center center;
