--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,35 @@
+nav {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 10%;
+  background-color: #555;
+  display: grid;
+  grid-template-columns: repeat(20%);
+  grid-template-areas: 'home progress workouts suggest settings';
+}
+
+nav a {
+  color: white;
+  text-align: center;
+  text-decoration: none;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: #222;
+  border-radius: 2px;
+}
+
+nav a:hover {
+  background-color: #222;
+}
+
+.active {
+  background-color: #333;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
