added settings a page and updated the style of each page using bootstrap

--- a/src/components/SettingsPage/SettingsPage.css
+++ b/src/components/SettingsPage/SettingsPage.css
@@ -13,7 +13,7 @@ body {
   margin: 0;
 }
 
-.loginContainer {
+.SettingsContainer {
   /* background-image: url('../../static/barbell.png'); */
 
   background-color: #fff;
