--- a/src/components/LoginPage/LoginPage.css
+++ b/src/components/LoginPage/LoginPage.css
@@ -47,15 +47,15 @@ input[type="password"] {
 }
 
 button:hover {
-  background-color: light-blue;
+  background-color: red;
 }
 div {
   padding: 15px;
 }
 button {
   width: 100%;
-  color: white;
-  background-color: #09f;
+  color: greenyellow;
+  background-color: green;
   padding: 15px;
   margin-top: 10px;
   border: none;
