--- a/src/components/SignUpPage/SignUpPage.css
+++ b/src/components/SignUpPage/SignUpPage.css
@@ -54,9 +54,9 @@ input[type="date"] {
 button:hover {
   background-color: light-blue;
 }
-div {
+/* div {
   padding: 15px;
-}
+} */
 button {
   width: 100%;
   color: white;
