--- a/src/components/HomePage/HomePage.css
+++ b/src/components/HomePage/HomePage.css
@@ -115,7 +115,7 @@ nav a {
   align-items: center;
   text-wrap: nowrap;
   font-size: 3vh;
-  background-color: #777;
+  background-color: #000000;
 }
 
 #weight-label,
@@ -157,8 +157,10 @@ nav a {
 
 #weight-graph-container,
 #duration-graph-container {
-  background-color: rgb(31, 36, 47);
+  background-color: rgb(0, 0, 0);
   height: 180px;
   padding: 0;
   margin-bottom: 5px;
+  border-Color: rgb(255, 0, 0);
 }
+
