--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-
+/* 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -10,7 +10,7 @@
   }
 }
 
-.App-header {
+ .App-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -19,7 +19,7 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
+} 
 
 .App-link {
   color: #61dafb;
@@ -32,4 +32,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
