--- a/src/components/LoginPage/LoginPage.css
+++ b/src/components/LoginPage/LoginPage.css
@@ -1,6 +1,6 @@
 /* * {
   border: solid red 1px;
-} */
+} 
 body {
    background-image: url("../../static/huge.png");
    background-size: cover;
@@ -9,18 +9,17 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+   height: 100vh; 
   margin: 0;
-}
+} 
 
 .loginContainer {
-  /* background-image: url('../../static/barbell.png'); */
 
   background-color: #fff;
   border-radius: 8px;
   padding: 20px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-}
+} 
 .form-group {
   margin-bottom: 10px;
 }
@@ -34,42 +33,16 @@ label {
   display: none;
 }
 
-input[type="text"],
-input[type="email"],
-input[type="password"] {
-  width: 400px;
-  padding: 8px;
-  margin-top: 4px;
-  margin-bottom: 12px;
-  border: 1px solid #aaa;
-  border-radius: 4px;
-  box-sizing: border-box;
-}
 
 button:hover {
   background-color: light-blue;
 }
-div {
-  padding: 15px;
-}
-button {
-  width: 100%;
-  color: white;
-  background-color: #09f;
-  padding: 15px;
-  margin-top: 10px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
 
-input[type="submit"]:hover {
-  background-color: #07d;
-}
 
-input.error {
-  border: 2px solid red;
-}
+
+
+
+
 .UpperSignIn {
   text-align: center;
 }
@@ -77,3 +50,4 @@ input.error {
   text-align: center;
   font-size: 11px;
 }
+*/
