--- a/client/src/bootstrap.css
+++ b/client/src/bootstrap.css
@@ -2113,6 +2113,15 @@ progress {
   color: var(--bs-secondary-color);
 }
 
+.form-container {
+  background-color: #fff;
+  border-radius: 8px;
+  margin: 20px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  width: 60vw;
+  max-width: 480px;
+}
+
 .form-control {
   display: block;
   padding: 0.75rem 1.5rem;
@@ -2135,6 +2144,8 @@ progress {
   border: 1px solid #aaa;
   border-radius: 4px;
   box-sizing: border-box;
+  width: 100%;
+  max-width: 500px;
 }
 @media (prefers-reduced-motion: reduce) {
   .form-control {
