--- a/client/src/components/HomePage/HomePage.module.css
+++ b/client/src/components/HomePage/HomePage.module.css
@@ -33,6 +33,7 @@
     justify-content: center;
     align-items: center;
     margin-top: 4vh;
+    height: 100%;
   }
   
   #grid-container {
@@ -163,6 +164,7 @@
     padding: 0;
     margin-bottom: 5px;
     border-Color: rgb(255, 0, 0);
+    justify-content: center;
   }
   
   
