--- a/client/src/components/ProgressPage/ProgressPage.module.css
+++ b/client/src/components/ProgressPage/ProgressPage.module.css
@@ -7,5 +7,7 @@
     justify-content: center;
     align-items: center;
     margin-top: 4vh;
-    height: 100%;
+    height: 96vh;
+    position: fixed;
+    width: 100%;
   }
