changed db.execute to db.query, queries include procedure call and selecting out param

--- a/client/src/bootstrap.css
+++ b/client/src/bootstrap.css
@@ -2166,6 +2166,11 @@ progress {
   width: 100%;
   max-width: 500px;
 }
+
+.form-control[type=button]:hover {
+  /* try to fix button stuff? */
+}
+
 @media (prefers-reduced-motion: reduce) {
   .form-control {
     transition: none;
