--- a/client/src/components/ProgressCalendar/ProgressCalendar.module.css
+++ b/client/src/components/ProgressCalendar/ProgressCalendar.module.css
@@ -1,24 +1,37 @@
-/* Calendar.css */
+:root {
+  --selected-brightness: 0.70;
+}
+
+.container {
+  width: 100%;
+  height: 100%;
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+}
+
 .calendar {
   font-family: 'Arial', sans-serif;
-  max-width: 600px;
-  margin: 20px auto;
+  width: 1fr;
+  min-width: 800px;
+  margin: 20px;
   padding: 20px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
   background-color: #fff;
+  display: grid;
+  grid-template-rows: auto 1fr;
 }
 
-.calendar-header {
+.calendarHeader {
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin-bottom: 20px;
 }
 
-.calendar-header button {
+.calendarHeader button {
   padding: 5px 10px;
-  background-color: #007bff;
+  background-color: #333;
   color: white;
   border: none;
   border-radius: 4px;
@@ -26,11 +39,11 @@
   font-size: 16px;
 }
 
-.calendar-header button:hover {
-  background-color: #0056b3;
+.calendarHeader button:hover {
+  background-color: #111
 }
 
-.calendar-header h2 {
+.calendarHeader h2 {
   margin: 0;
   font-size: 24px;
   color: #333;
@@ -39,19 +52,84 @@
 .days {
   display: grid;
   grid-template-columns: repeat(7, 1fr);
+  grid-template-rows: repeat(5, 100px);
   gap: 5px;
+  user-select: none;
+  height: 500px;
 }
 
 .day {
-  padding: 10px;
   background-color: #f9f9f9;
   text-align: center;
   border: 1px solid #ddd;
   box-sizing: border-box;
+  cursor: pointer;
+  display: grid;
+  grid-template-rows: auto 1fr;
 }
 
-.day-today {
+.dayNumber {
+  display: flex;
+  align-items: flex-start;
+  justify-content: left;
+  border: 0;
+  padding: 0;
+  border: 0;
+}
+
+.dayLogList {
+  overflow-y: auto;
+}
+
+.logName {
+  text-wrap: nowrap;
+}
+
+.times {
+  font-size: 0.6em;
+  text-wrap: wrap;
+  letter-spacing: normal;
+}
+
+.dayToday {
   background-color: #007bff;
   color: white;
 }
 
+.daySelected {
+  filter: brightness(var(--hover-brightness));
+}
+
+.sidePanel {
+  background-color: #f9f9f9;
+  width: 100%;
+  height: 100%;
+}
+
+.sidePanelHeader {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
+.logList {
+  list-style-type: none;
+  padding: 0;
+  width: 100%;
+  justify-content: center;
+}
+
+.logListItem {
+  text-align: center;
+  cursor: pointer;
+  background-color: grey;
+  color: black;
+  border-radius: 4px;
+  border: black;
+  margin: 5px;
+  padding: 1px;
+}
+
+.logListItem .selected {
+
+}
