for upload to server (settings broken rn)

--- a/client/src/components/SettingsPage/SettingsPage.module.css
+++ b/client/src/components/SettingsPage/SettingsPage.module.css
@@ -13,6 +13,10 @@
   height: 100vh;
   width: 100vw;
 }
+
+.body.delete {
+  background-image: url('../../static/angry.jpg');
+}
   .hide {
     display: none;
   }
