--- a/client/src/components/ConfirmPopOut/ConfirmPopOut.module.css
+++ b/client/src/components/ConfirmPopOut/ConfirmPopOut.module.css
@@ -3,68 +3,6 @@
 } */
 
 .body {
-  background-image: url("../../static/huge.png");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center center;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  width: 100vw;
+  background-image: url("../../static/angry.jpg");
+  color: green;
 }
-  .hide {
-    display: none;
-  }
-  .circular-image {
-    border-radius: 50%;
-    width: 100px; /* or any desired size */
-    height: 100px; /* should be the same as width for a perfect circle */
-  }
-  .body label {
-    display: block;
-    font-weight: bold;
-    margin-bottom: 5px;
-  }
-
-  
-
-  /*   
-  input[type="text"],
-  input[type="email"],
-  input[type="password"] {
-    width: 400px;
-    padding: 8px;
-    margin-top: 4px;
-    margin-bottom: 12px;
-    border: 1px solid #aaa;
-    border-radius: 4px;
-    box-sizing: border-box;
-  } */
-  
-  .buttons button {
-    width: 100%;
-    color: white;
-    
-    padding: 15px;
-    margin-top: 10px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-}
-
-.popups {
-  display: grid;
-  grid-template-rows: repeat(4, 1fr);
-  row-gap: 5px;
-}
-
-
-  .UpperSignIn {
-    text-align: center;
-  }
-  .LowerLogin {
-    text-align: center;
-    font-size: 11px;
-  }
-  
